# c-learning

./: .gitignore  CMakeLists.txt  main.c  readme.md
array/: stringArray.c
datatype/: Enum.c  Struct.c  Union.c  cDataType.c  readme.md
function/: functionDeclare.c  math.c  math.h
helloworld/: hello.c
linkList/: HelloLinkList.c  readme.md
macro/: macroDefine.c
memoryAllocation/: MemoryAllocation.c  readme.md
operation/: bitShift.c  comma.c
point/: ArrayPoint.c  FunctionAndPoint.c  ParamOfMain.c  PointOfNull.c  StringAndPoint.c  VoidPoint.c  arrayAndPoint.c  castPoint.c  helloPoint.c  pointArray.c  pointPoint.c  valueOfPoint.c
string/: StringHandle.c  escape.c  readme.md
variable/: Const.c  globalVariable.c  localVariable.c
